<resources>
    <string name="app_name">Wooma</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email_address">Email address</string>
    <string name="we_ll_send_you_a_code_to_verify">We\'ll send you a code to verify.</string>
    <string name="send_verification_code">Send Verification Email</string>
    <string name="search_address">Search Address…</string>
    <string name="crm_sync_on_edit_properties_in_reapit">CRM sync on. Edit properties in Reapit.</string>
    <string name="your_properties">Your properties</string>
    <string name="activate_your_account">Just a few more details</string>
    <string name="continue_">Continue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="company">Company</string>
    <string name="properties">Properties</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="active_properties">Active Properties</string>
    <string name="create_new_report">Create new report</string>
    <string name="add_property">Add a property</string>
    <string name="create_your_first_property">Create your first property</string>
    <string name="you_can_then_create_a_report_for_it">You can then create a report for it</string>
    <string name="edit_property">Edit Property</string>
    <string name="address_line_one">Address line 1</string>
    <string name="address_line_two">Address line 2 (Optional)</string>
    <string name="city_">City</string>
    <string name="post_code">Postcode</string>
    <string name="save_">Save</string>
    <string name="property_archive">Property archive</string>
    <string name="archived_properties">Archived properties</string>
    <string name="confirm_address">Confirm address</string>
    <string name="what_s_the_postcode">What’s the postcode?</string>
    <string name="enter_address_manually">Enter address manually</string>
    <string name="new_report">New Report</string>
    <string name="select_property">Select Property</string>
    <string name="select_report_type">Select report type</string>
    <string name="configure_report">Configure report</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_">Create an Account</string>
    <string name="login">Login</string>
    <string name="rooms">Rooms</string>
    <string name="edit">Edit</string>
    <string name="add_another_room">Add another room</string>
    <string name="create_report">Create Report</string>
    <string name="edit_room_names">Edit room names</string>
    <string name="add_room">Add rooms</string>
    <string name="add_to_report">Add to report</string>
    <string name="add_custom">Add custom</string>
    <string name="inventory">Inventory</string>
    <string name="complete_report">Complete Report</string>
    <string name="report_setting">Report Settings</string>
    <string name="report_id">Report ID</string>
    <string name="make_a_change">Make a change</string>
    <string name="duplicate">Duplicate</string>
    <string name="report_type">Report type</string>
    <string name="assessor">Assessor</string>
    <string name="date">Date</string>
    <string name="duplicate_report">Duplicate Report</string>
    <string name="property">Property</string>
    <string name="make_an_exact_copy">Make an exact copy</string>
    <string name="copy_photos">Copy all photos</string>
    <string name="copy_descriptions">Copy descriptions</string>
    <string name="copy_condition_notes">Copy condition notes</string>
    <string name="change_report_type">Change report type</string>
    <string name="current_report_type">Current report type</string>
    <string name="change_to">Change to</string>
    <string name="change_assessor">Change assessor</string>
    <string name="current_assessor">Current assessor</string>
    <string name="request_tenant_signatures_or_complete_now">Request tenant signatures or complete now</string>
    <string name="collect_tenant_signatures">Collect tenant signatures</string>
    <string name="send_for_review_signature">Send for review + signature</string>
    <string name="add_another_tenant">Add another tenant</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="generate_document">Generate Document</string>
    <string name="blank_signature_spaces">Blank signature spaces</string>
    <string name="extend_time">Extend Time</string>
    <string name="tenant_review_in_progress">Tenant Review in Progress</string>
    <string name="signatures_received">Signatures received</string>
    <string name="extend_timer">Extend timer</string>
    <string name="give_tenants_more_time_to_sign">Give tenants more time to sign</string>
    <string name="extend_by">Extend by</string>
    <string name="edit_tenant">Edit Tenant</string>
    <string name="submit_re_send">Submit + re-send</string>
    <string name="copy_previous_report_rooms_description_and_issues">Copy previous report rooms, description and issues</string>
    <string name="select_previous">Select Previous Report</string>
    <string name="select_previous_report">Select Previous Report</string>
    <string name="meters">Meters</string>
    <string name="type">Type</string>
    <string name="reading">Reading</string>
    <string name="serial_number">Serial Number</string>
    <string name="location">Location</string>
    <string name="keys">Keys</string>
    <string name="quantity">Quantity</string>
    <string name="detector">Detector</string>
    <string name="test_result">Test Result</string>
    <string name="checklist">Checklist</string>
    <string name="info_field">Info Field</string>
    <string name="questions">Questions</string>
    <string name="question">Question</string>
    <string name="report_completed">Report Completed</string>
    <string name="change_date">Change Date</string>
    <string name="change_completion_date">Change Completion Date</string>
    <string name="view_final_report">View final report</string>
    <string name="notes_optional">Note (Optional)</string>
</resources>