<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sofiasans_bold"
                android:text="@string/properties"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivArchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/svg_archive" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAddProperty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:src="@drawable/svg_add_property" />

        </LinearLayout>

        <!-- Search Bar -->
       <!-- <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_edittext"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:queryHint="Search address..."
            android:textColorHint="#888888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLayout" />
-->
        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLayout">

            <EditText
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/svg_search"
                android:fontFamily="@font/sofiasans_regular"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:hint="@string/search_address"
                android:drawablePadding="@dimen/_8sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>


        <!-- Info Text -->
        <TextView
            android:id="@+id/tvSyncInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_border_info"
            android:fontFamily="@font/sofiasans_regular"
            android:padding="@dimen/_4sdp"
            android:text="@string/crm_sync_on_edit_properties_in_reapit"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchLayout" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_edittext"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSyncInfo">
            <!-- Title -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiasans_bold"
                android:text="@string/active_properties"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <!-- RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProperties"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_56sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/emptyPropertyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofiasans_bold"
            android:text="@string/create_your_first_property"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/sofiasans_regular"
            android:text="@string/you_can_then_create_a_report_for_it"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:src="@drawable/svg_add_prop_arrow" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddProperty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/bg_button_green"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/add_property"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/border_stroke" />
        <!-- Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/bg_button_green"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/create_new_report"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
