<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_clr">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:contentDescription="Back"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/sofiasans_bold"
            android:gravity="center"
            android:text="@string/edit_property"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivReportArchive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/svg_archive" />

    </LinearLayout>

    <!-- Title -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_18sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/topLayout"
        app:layout_constraintStart_toStartOf="@id/topLayout"
        app:layout_constraintTop_toBottomOf="@id/topLayout">

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofiasans_regular"
            android:text="@string/address_line_one"
            android:textColor="@color/lbls_color"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAddressOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_edittext"
            android:hint="Enter Address Line 1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/sofiasans_regular"
            android:text="@string/address_line_two"
            android:textColor="@color/lbls_color"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAddressTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_edittext"
            android:hint="Enter Address Line 2"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/sofiasans_regular"
            android:text="@string/city_"
            android:textColor="@color/lbls_color"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_edittext"
            android:hint="Enter City"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/sofiasans_regular"
            android:text="@string/post_code"
            android:textColor="@color/lbls_color"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_edittext"
            android:hint="Enter Postcode"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_button_green"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/save_"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
